<resources>
    <string name="N_A">N/A</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_unknown">Unknown</string>
    <string name="TrackType_video">Video</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="a_cache">a-cache</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="ad">Ad</string>
    <string name="al_exo_controls_cc_disabled_description">Enable subtitles</string>
    <string name="al_exo_controls_cc_enabled_description">Disable subtitles</string>
    <string name="al_exo_controls_custom_playback_speed">%1$.2fx</string>
    <string name="al_exo_controls_fastforward_description">Fast forward</string>
    <string name="al_exo_controls_fullscreen_enter_description">Enter fullscreen</string>
    <string name="al_exo_controls_fullscreen_exit_description">Exit fullscreen</string>
    <string name="al_exo_controls_hide">Hide player controls</string>
    <string name="al_exo_controls_next_description">Next</string>
    <string name="al_exo_controls_overflow_hide_description">Hide additional settings</string>
    <string name="al_exo_controls_overflow_show_description">Show additional settings</string>
    <string name="al_exo_controls_pause_description">Pause</string>
    <string name="al_exo_controls_play_description">Play</string>
    <string name="al_exo_controls_playback_speed">Speed</string>
    <string name="al_exo_controls_playback_speed_normal">Normal</string>
    <string name="al_exo_controls_previous_description">Previous</string>
    <string name="al_exo_controls_repeat_all_description">Repeat all</string>
    <string name="al_exo_controls_repeat_off_description">Repeat none</string>
    <string name="al_exo_controls_repeat_one_description">Repeat one</string>
    <string name="al_exo_controls_rewind_description">Rewind</string>
    <string name="al_exo_controls_seek_bar_description">Playback progress</string>
    <string name="al_exo_controls_settings_description">Settings</string>
    <string name="al_exo_controls_show">Show player controls</string>
    <string name="al_exo_controls_shuffle_off_description">Shuffle off</string>
    <string name="al_exo_controls_shuffle_on_description">Shuffle on</string>
    <string name="al_exo_controls_stop_description">Stop</string>
    <string name="al_exo_controls_time_placeholder">00:00:00</string>
    <string name="al_exo_controls_vr_description">VR mode</string>
    <string name="al_exo_download_completed">Download completed</string>
    <string name="al_exo_download_description">Download</string>
    <string name="al_exo_download_downloading">Downloading</string>
    <string name="al_exo_download_failed">Download failed</string>
    <string name="al_exo_download_notification_channel_name">Downloads</string>
    <string name="al_exo_download_paused">Downloads paused</string>
    <string name="al_exo_download_paused_for_network">Downloads waiting for network</string>
    <string name="al_exo_download_paused_for_wifi">Downloads waiting for WiFi</string>
    <string name="al_exo_download_removing">Removing downloads</string>
    <string name="al_exo_item_list">%1$s, %2$s</string>
    <string name="al_exo_track_bitrate">%1$.2f Mbps</string>
    <string name="al_exo_track_mono">Mono</string>
    <string name="al_exo_track_resolution">%1$d × %2$d</string>
    <string name="al_exo_track_role_alternate">Alternate</string>
    <string name="al_exo_track_role_closed_captions">CC</string>
    <string name="al_exo_track_role_commentary">Commentary</string>
    <string name="al_exo_track_role_supplementary">Supplementary</string>
    <string name="al_exo_track_selection_auto">Auto</string>
    <string name="al_exo_track_selection_none">None</string>
    <string name="al_exo_track_selection_title_audio">Audio</string>
    <string name="al_exo_track_selection_title_text">Text</string>
    <string name="al_exo_track_selection_title_video">Video</string>
    <string name="al_exo_track_stereo">Stereo</string>
    <string name="al_exo_track_surround">Surround sound</string>
    <string name="al_exo_track_surround_5_point_1">5.1 surround sound</string>
    <string name="al_exo_track_surround_7_point_1">7.1 surround sound</string>
    <string name="al_exo_track_unknown">Unknown</string>
    <string name="android_version_lower">The Android version is too low and will be compressed.</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_declare">Privacy settings</string>
    <string name="app_name">RC FPV</string>
    <string name="app_version">App Version</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applovin_agree_message">Please press \"Continue\" if you choose to start using our app.</string>
    <string name="applovin_alt_privacy_policy_text" />
    <string name="applovin_continue_button_text">Continue</string>
    <string name="applovin_creative_debugger_disabled_text">Enable the Creative Debugger SDK settings in order to view recent ads.</string>
    <string name="applovin_creative_debugger_no_ads_text">No recently displayed ads found.</string>
    <string name="applovin_list_item_image_description">Displays more info about the list item.</string>
    <string name="applovin_pp_and_tos_title">To use %s you must agree to our Terms &amp; Conditions and affirm you have reviewed our Privacy Policy</string>
    <string name="applovin_pp_title">To use %s you must affirm that you have reviewed and acknowledged our Privacy Policy.</string>
    <string name="applovin_privacy_policy_text">Privacy Policy</string>
    <string name="applovin_terms_of_service_text">Terms &amp; Conditions</string>
    <string name="applovin_terms_of_use_text">Terms of Use</string>
    <string name="aps_mraid_close_button">Interstitial close button</string>
    <string name="back">Back</string>
    <string name="bigo_ad_about_app_default">About this app</string>
    <string name="bigo_ad_click_to_try">Click to try?</string>
    <string name="bigo_ad_comment_num_text">Reviews</string>
    <string name="bigo_ad_cta_default">View more</string>
    <string name="bigo_ad_cta_download_default">Install</string>
    <string name="bigo_ad_description_default">Free access now!</string>
    <string name="bigo_ad_double_video_choose_video">Choose your favorite video</string>
    <string name="bigo_ad_double_video_count_down">Auto-play in %ds</string>
    <string name="bigo_ad_download_num_text">Downloads</string>
    <string name="bigo_ad_feedback_copied">Copied</string>
    <string name="bigo_ad_feedback_copy_ad_id">Copy Ad Id</string>
    <string name="bigo_ad_feedback_hide_ads">Hide ADs</string>
    <string name="bigo_ad_feedback_report_ads">Report ADs</string>
    <string name="bigo_ad_feedback_why_this_ad">Why can I see this AD?</string>
    <string name="bigo_ad_lose_reward">You will lose your reward.</string>
    <string name="bigo_ad_resume">Resume</string>
    <string name="bigo_ad_skip">Skip</string>
    <string name="bigo_ad_skip_video">Skip video?</string>
    <string name="bigo_ad_splash_skip">SKIP</string>
    <string name="bigo_ad_tag_back">bigo_ad_tag_back</string>
    <string name="bigo_ad_tag_close">bigo_ad_tag_close</string>
    <string name="bigo_ad_tag_progressbar">bigo_ad_tag_progressbar</string>
    <string name="company">SZ-YLS</string>
    <string name="dialog_cancel">cancel</string>
    <string name="dialog_ok">sure</string>
    <string name="dialog_string_declare_agree">agree</string>
    <string name="dialog_string_declare_content">Please read carefully and fully understand the terms of the User Agreement and Privacy Policy. You can view, change, delete personal information and manage your authorization in Settings. You can read the User Agreement and Privacy Policy for more information. If you agree, please click Agree to start accepting our services.</string>
    <string name="dialog_string_declare_disagree">disagree</string>
    <string name="dialog_string_declare_title">User Agreement and Privacy Policy</string>
    <string name="enter_password_tip">Please input a password</string>
    <string name="firmware_setting_camera">Lens settings</string>
    <string name="firmware_setting_channel">channel</string>
    <string name="firmware_setting_resolution">resolution</string>
    <string name="firmware_setting_ssid">WIFI name</string>
    <string name="firmware_settings_title">Firmware settings</string>
    <string name="language_Japanese">Japanese</string>
    <string name="language_chinese">Chinese</string>
    <string name="language_english">English</string>
    <string name="language_french">French</string>
    <string name="language_german">German</string>
    <string name="language_portuguese">Portuguese</string>
    <string name="language_setting">Language settings</string>
    <string name="language_spanish">Spanish</string>
    <string name="local_music">local music</string>
    <string name="music_select_title">Music list</string>
    <string name="popular_music_chinese">Popular songs</string>
    <string name="res_1080p">1080P</string>
    <string name="res_4k">4K</string>
    <string name="res_720p">720P</string>
    <string name="select_language">select language</string>
    <string name="turn_off_music">Turn off</string>
</resources>