<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/colorBlack" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/text_normal" android:textColor="@color/text_white" android:gravity="center" android:id="@id/dialog_select_language_title" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/select_language" />
    <View android:background="@color/text_white" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <RadioGroup android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RadioButton android:textSize="@dimen/text_small" android:textColor="@color/text_white" android:id="@id/dialog_select_language_chinese" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/language_chinese" android:buttonTint="@color/text_white" />
        <RadioButton android:textSize="@dimen/text_small" android:textColor="@color/text_white" android:id="@id/dialog_select_language_english" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/language_english" android:buttonTint="@color/text_white" />
        <RadioButton android:textSize="@dimen/text_small" android:textColor="@color/text_white" android:id="@id/dialog_select_language_japanese" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/language_Japanese" android:buttonTint="@color/text_white" />
        <RadioButton android:textSize="@dimen/text_small" android:textColor="@color/text_white" android:id="@id/dialog_select_language_german" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/language_german" android:buttonTint="@color/text_white" />
        <RadioButton android:textSize="@dimen/text_small" android:textColor="@color/text_white" android:id="@id/dialog_select_language_french" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/language_french" android:buttonTint="@color/text_white" />
        <RadioButton android:textSize="@dimen/text_small" android:textColor="@color/text_white" android:id="@id/dialog_select_language_portuguese" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/language_portuguese" android:buttonTint="@color/text_white" />
        <RadioButton android:textSize="@dimen/text_small" android:textColor="@color/text_white" android:id="@id/dialog_select_language_spanish" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/language_spanish" android:buttonTint="@color/text_white" />
    </RadioGroup>
</LinearLayout>