<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/text_small" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/dialog_string_declare_title" />
    <TextView android:textSize="@dimen/text_smaller" android:id="@id/dialog_declare_tv_content" android:layout_width="wrap_content" android:layout_height="200.0dip" android:layout_margin="20.0dip" android:text="@string/dialog_string_declare_content" android:layout_centerInParent="true" />
    <View android:background="@color/progress_gray" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginBottom="50.0dip" android:layout_alignParentBottom="true" />
    <LinearLayout android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_alignParentBottom="true">
        <TextView android:gravity="center" android:id="@id/dialog_declare_tv_disagree" android:layout_width="0.0dip" android:layout_height="50.0dip" android:text="@string/dialog_string_declare_disagree" android:layout_weight="1.0" />
        <TextView android:textColor="@color/default_blue_light" android:gravity="center" android:id="@id/dialog_declare_tv_agree" android:layout_width="0.0dip" android:layout_height="50.0dip" android:text="@string/dialog_string_declare_agree" android:layout_weight="1.0" />
    </LinearLayout>
</RelativeLayout>