<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/colorBlack" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/text_normal" android:textColor="@color/text_white" android:gravity="center" android:id="@id/dialog_select_language_title" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/firmware_setting_resolution" />
    <View android:background="@color/text_white" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <RadioGroup android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RadioButton android:textSize="@dimen/text_small" android:textColor="@color/text_white" android:id="@id/dialog_select_resolution_720p" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/res_720p" android:buttonTint="@color/text_white" />
        <RadioButton android:textSize="@dimen/text_small" android:textColor="@color/text_white" android:id="@id/dialog_select_resolution_1080p" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/res_1080p" android:buttonTint="@color/text_white" />
        <RadioButton android:textSize="@dimen/text_small" android:textColor="@color/text_white" android:id="@id/dialog_select_resolution_4k" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/res_4k" android:buttonTint="@color/text_white" />
    </RadioGroup>
    <View android:background="@color/divider_bg" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <TextView android:textSize="@dimen/text_normal" android:textColor="@android:color/white" android:gravity="center" android:id="@id/dialog_select_resolution_cancel" android:background="@drawable/button_left_bg_selector" android:layout_width="0.0dip" android:layout_height="@dimen/height_button" android:text="@string/dialog_cancel" android:layout_weight="1.0" />
        <View android:background="@color/divider_bg" android:layout_width="1.0dip" android:layout_height="fill_parent" />
        <TextView android:textSize="@dimen/text_normal" android:textColor="@android:color/white" android:gravity="center" android:id="@id/dialog_select_resolution_ok" android:background="@drawable/button_right_bg_selector" android:layout_width="0.0dip" android:layout_height="@dimen/height_button" android:text="@string/dialog_ok" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>