<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/colorBlack" android:layout_width="fill_parent" android:layout_height="65.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:background="@drawable/bg_item_settings" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="10.0dip">
        <TextView android:textSize="@dimen/text_normal" android:textColor="@color/text_white" android:id="@id/item_settings_three_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/language_setting" android:layout_centerVertical="true" android:layout_marginStart="30.0dip" />
        <ImageView android:id="@id/item_settings_three_icon" android:padding="3.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@mipmap/ic_go_to" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/company" />
        <TextView android:textSize="@dimen/text_small" android:textColor="@color/front_gary" android:id="@id/item_settings_three_tv_1" android:padding="3.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toLeftOf="@id/item_settings_three_icon" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        <LinearLayout android:orientation="horizontal" android:id="@id/item_settings_three_switch_layout" android:background="@drawable/bg_switch_settings" android:layout_width="450.0dip" android:layout_height="fill_parent" android:layout_centerVertical="true" android:layout_alignParentEnd="true">
            <TextView android:textColor="@color/text_black" android:gravity="center" android:id="@id/item_settings_three_switch_tv1" android:background="@drawable/bg_switch_left_settings" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/language_chinese" android:layout_weight="1.0" />
            <View android:background="@color/text_white" android:layout_width="1.0dip" android:layout_height="fill_parent" />
            <TextView android:textColor="@color/text_white" android:gravity="center" android:id="@id/item_settings_three_switch_tv2" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/language_english" android:layout_weight="1.0" />
            <View android:background="@color/text_white" android:layout_width="1.0dip" android:layout_height="fill_parent" />
            <TextView android:textColor="@color/text_white" android:gravity="center" android:id="@id/item_settings_three_switch_tv3" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/language_Japanese" android:layout_weight="1.0" />
            <View android:background="@color/text_white" android:layout_width="1.0dip" android:layout_height="fill_parent" />
            <TextView android:textColor="@color/text_white" android:gravity="center" android:id="@id/item_settings_three_switch_tv4" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/language_german" android:layout_weight="1.0" />
            <View android:background="@color/text_white" android:layout_width="1.0dip" android:layout_height="fill_parent" />
            <TextView android:textColor="@color/text_white" android:gravity="center" android:id="@id/item_settings_three_switch_tv5" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/language_french" android:layout_weight="1.0" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>