<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/firmware_setting_top_bar" android:layout_width="fill_parent" android:layout_height="50.0dip">
        <TextView android:textSize="@dimen/text_normal_inc" android:textColor="@color/text_black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/firmware_settings_title" android:layout_centerInParent="true" />
        <View android:background="@color/text_gray" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_alignParentBottom="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/dialog_firmware_setting_item_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/firmware_setting_top_bar">
        <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:background="@drawable/bg_firmware_settings" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/text_smaller_x" android:textColor="@android:color/black" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/firmware_setting_ssid" android:layout_weight="1.0" />
            <View android:background="@color/colorGray" android:layout_width="1.0dip" android:layout_height="fill_parent" />
            <TextView android:textSize="@dimen/text_smaller_x" android:textColor="@android:color/black" android:gravity="center" android:id="@id/dialog_firmware_setting_ssid_tv" android:background="@drawable/btn_settings_bg_selector" android:layout_width="0.0dip" android:layout_height="50.0dip" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:background="@drawable/bg_firmware_settings" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
            <TextView android:textSize="@dimen/text_smaller_x" android:textColor="@android:color/black" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/firmware_setting_resolution" android:layout_weight="1.0" />
            <View android:background="@color/colorGray" android:layout_width="1.0dip" android:layout_height="fill_parent" />
            <TextView android:textSize="@dimen/text_smaller_x" android:textColor="@android:color/black" android:gravity="center" android:id="@id/dialog_firmware_setting_resolution_tv" android:background="@drawable/btn_settings_bg_selector" android:layout_width="0.0dip" android:layout_height="50.0dip" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:background="@drawable/bg_firmware_settings" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
            <TextView android:textSize="@dimen/text_smaller_x" android:textColor="@android:color/black" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/firmware_setting_channel" android:layout_weight="1.0" />
            <View android:background="@color/colorGray" android:layout_width="1.0dip" android:layout_height="fill_parent" />
            <TextView android:textSize="@dimen/text_smaller_x" android:textColor="@android:color/black" android:gravity="center" android:id="@id/dialog_firmware_setting_channel_tv" android:background="@drawable/btn_settings_bg_selector" android:layout_width="0.0dip" android:layout_height="50.0dip" android:layout_weight="1.0" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:background="@drawable/bg_firmware_settings" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
            <TextView android:textSize="@dimen/text_smaller_x" android:textColor="@android:color/black" android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/firmware_setting_camera" android:layout_weight="1.0" />
            <View android:background="@color/colorGray" android:layout_width="1.0dip" android:layout_height="fill_parent" />
            <TextView android:textSize="@dimen/text_smaller_x" android:textColor="@android:color/black" android:gravity="center" android:id="@id/dialog_firmware_setting_camera_tv" android:background="@drawable/btn_settings_bg_selector" android:layout_width="0.0dip" android:layout_height="50.0dip" android:layout_weight="1.0" />
        </LinearLayout>
        <View android:background="@color/divider_bg" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="10.0dip" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/dialog_firmware_setting_item_layout">
        <TextView android:textSize="@dimen/text_normal" android:textColor="@android:color/black" android:gravity="center" android:id="@id/dialog_firmware_setting_cancel" android:background="@drawable/button_left_bg_selector" android:layout_width="0.0dip" android:layout_height="@dimen/height_button" android:text="@string/dialog_cancel" android:layout_weight="1.0" />
        <View android:background="@color/divider_bg" android:layout_width="1.0dip" android:layout_height="fill_parent" />
        <TextView android:textSize="@dimen/text_normal" android:textColor="@android:color/black" android:gravity="center" android:id="@id/dialog_firmware_setting_ok" android:background="@drawable/button_right_bg_selector" android:layout_width="0.0dip" android:layout_height="@dimen/height_button" android:text="@string/dialog_ok" android:layout_weight="1.0" />
    </LinearLayout>
</RelativeLayout>