<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/colorBlack" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/music_select_top_layout" android:background="@color/colorBlack" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/music_select_back_btn" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_margin="5.0dip" android:src="@mipmap/play_back_icon" android:contentDescription="@null" />
        <TextView android:textSize="@dimen/text_normal" android:textColor="@color/text_white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/music_select_title" android:layout_centerInParent="true" />
        <Button android:textSize="@dimen/text_smaller_x" android:textColor="@color/text_white" android:id="@id/music_select_turn_off_btn" android:background="@color/colorBlack" android:layout_width="wrap_content" android:layout_height="30.0dip" android:text="@string/turn_off_music" android:layout_centerVertical="true" android:layout_marginEnd="10.0dip" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <View android:id="@id/music_select_top_line" android:background="@color/text_white" android:layout_width="fill_parent" android:layout_height="2.0dip" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <ImageView android:id="@id/music_select_previous" android:padding="5.0dip" android:layout_width="50.0dip" android:layout_height="100.0dip" android:layout_margin="3.0dip" android:src="@mipmap/ic_previous_music" />
        <FrameLayout android:id="@id/music_select_center_layout" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" />
        <ImageView android:id="@id/music_select_next" android:padding="5.0dip" android:layout_width="50.0dip" android:layout_height="100.0dip" android:layout_margin="3.0dip" android:src="@mipmap/ic_next_music" />
    </LinearLayout>
    <View android:background="@color/text_white" android:layout_width="fill_parent" android:layout_height="2.0dip" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/music_select_bottom_layout" android:background="@color/colorBlack" android:padding="3.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/text_normal" android:textColor="@color/text_yellow" android:gravity="center_vertical" android:id="@id/music_select_popular_chinese_music" android:layout_width="wrap_content" android:layout_height="48.0dip" android:text="@string/popular_music_chinese" android:layout_marginStart="50.0dip" />
        <TextView android:textSize="@dimen/text_normal" android:textColor="@color/text_white" android:gravity="center_vertical" android:id="@id/music_select_local_music" android:layout_width="wrap_content" android:layout_height="48.0dip" android:text="@string/local_music" android:layout_marginStart="50.0dip" />
    </LinearLayout>
</LinearLayout>