<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:background="@drawable/bg_dialog" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:layout_width="fill_parent" android:layout_height="20.0dip" />
    <RelativeLayout android:gravity="center" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="2.0">
        <EditText android:textSize="@dimen/text_small" android:textColor="@color/text_black" android:id="@id/dialog_enter_pwd_edit" android:background="@drawable/bg_edit_text" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:hint="@string/enter_password_tip" android:inputType="text" />
        <TextView android:textSize="@dimen/text_smaller" android:textColor="@color/text_orange" android:gravity="right" android:id="@id/dialog_enter_pwd_edit_tip" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:layout_below="@id/dialog_enter_pwd_edit" />
    </RelativeLayout>
    <View android:background="@color/divider_bg" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <TextView android:textSize="@dimen/text_normal" android:textColor="@android:color/black" android:gravity="center" android:id="@id/dialog_enter_pwd_cancel" android:background="@drawable/button_left_bg_selector" android:layout_width="0.0dip" android:layout_height="@dimen/height_button" android:text="@string/dialog_cancel" android:layout_weight="1.0" />
        <View android:background="@color/divider_bg" android:layout_width="1.0dip" android:layout_height="fill_parent" />
        <TextView android:textSize="@dimen/text_normal" android:textColor="@android:color/black" android:gravity="center" android:id="@id/dialog_enter_pwd_ok" android:background="@drawable/button_right_bg_selector" android:layout_width="0.0dip" android:layout_height="@dimen/height_button" android:text="@string/dialog_ok" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>